java-rest-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-apps
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /java(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: java-rest-api-nodeport
                port:
                  number: 5050
          - path: /python(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fastapi-basic-app-service-nodeport
                port:
                  number: 5000
